<resources>
    <string name="app_name">Fragment demo</string>
    <string name="button_1">Add advices</string>
    <string name="button_2">Show advices</string>
    <string name="button_3">Add</string>
    <string name="textview">List of advices</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="content">Content</string>
    <string name="advices">Advices</string>
    <string name="add_advices">Add advices</string>
    <string name="settings">Settings</string>

    <string-array name="categories_spinner">
        <item>Lifestyle</item>
        <item>Technologies</item>
        <item>Miscellaneous</item>
    </string-array>
</resources>