<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:cardMaxElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/adviceContent"
                android:layout_width="384dp"
                android:layout_height="52dp"
                android:layout_gravity="bottom|center_vertical"
                android:layout_margin="10dp"
                android:text="@string/content"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/adviceCategory"
                android:layout_width="121dp"
                android:layout_height="29dp"
                android:layout_gravity="top|end"
                android:layout_margin="10dp"
                android:text="@string/category"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/adviceContent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/adviceAuthor"
                android:layout_width="257dp"
                android:layout_height="30dp"
                android:layout_gravity="top|start"
                android:layout_margin="10dp"
                android:text="@string/author"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/adviceContent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>